--- a/src/utility/custom.css
+++ b/src/utility/custom.css
@@ -61,3 +61,28 @@
 .button-glow:hover {
   animation: rainbow-glow 2s infinite linear;
 }
+
+/* card badge custom design */
+
+@keyframes mern-colors {
+  0%,
+  100% {
+    border-color: #47a248;
+  } /* MongoDB Green */
+  33% {
+    border-color: #61dafb;
+  } /* React Blue */
+  67% {
+    border-color: #339933;
+  } /* Node.js Green */
+}
+
+.badge-mern {
+  animation: mern-colors 6s infinite linear;
+  border: 2px solid;
+  transition: box-shadow 0.3s ease;
+}
+
+.badge-mern:hover {
+  box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.7);
+}
