--- a/src/utility/custom.css
+++ b/src/utility/custom.css
@@ -86,3 +86,36 @@
 .badge-mern:hover {
   box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.7);
 }
+
+/* make an animation where a rainbow flows through a text from start to end in a smooth manner */
+@keyframes rainbow-flow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.rainbow-flow {
+  background: linear-gradient(
+    45deg,
+    #007bff,
+    #6610f2,
+    #6f42c1,
+    #e83e8c,
+    #fd7e14,
+    #20c997,
+    #17a2b8,
+    #28a745,
+    #ffc107
+  );
+  background-size: 400% 400%;
+  animation: rainbow-flow 5s linear infinite;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
